--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,5 @@
 <div class="jumbotron text-center">
 
-    <a href="/">view all contacts</a>
     <table align="center" class="table table-condensed" style="margin-top:10px; width:550px; text-align:left;" border="0">
         <tr>
             <td>
@@ -20,7 +19,7 @@
 
                 <button ng-if="contact.exists==true" type="submit" class="btn btn-default"  ng-click="updateContact(contact)">Update Contact</button>
                 <button ng-if="contact.exists==false" type="submit" class="btn btn-default"  ng-click="updateContact(contact)">Add Contact</button>
-                <a href="/" style="margin-top: 12px; margin-left: 5px;">( cancel )</a>
+                <a href="" ng-click="cancelContact()" style="margin-top: 12px; margin-left: 5px;">( cancel )</a>
 
             </td>
         </tr>
