--- a/pages/list_contacts.html
+++ b/pages/list_contacts.html
@@ -29,7 +29,7 @@
                     </div>
 
                 </td>
-                <td align="center"><a href="" data-ng-click="showContactDetails($index)">more</a> | <a href="/editContact/{{$index}}">edit</a> | <a href="" data-ng-click="deleteContact($index)">delete</a></td>
+                <td align="center"><a href="" data-ng-click="showContactDetails($index)">more</a> | <a href="editContact/{{$index}}">edit</a> | <a href="" data-ng-click="deleteContact($index)">delete</a></td>
             </tr>
         </table>
 	
