Changed default page to be only html, was a cfm page.

--- a/pages/list_contacts.html
+++ b/pages/list_contacts.html
@@ -32,6 +32,7 @@
                 <td align="center"><a href="" data-ng-click="showContactDetails($index)">more</a> | <a href="editContact/{{$index}}">edit</a> | <a href="" data-ng-click="deleteContact($index)">delete</a></td>
             </tr>
         </table>
+        <div style="margin-top:20px;"><a href="" data-ng-click="reloadContacts()">reload all contacts</a></div>
 	
 	
 </div>
